# shop-project

./: .gitignore  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_data_create_and_more.py  0004_alter_product_image_preview.py  0005_alter_product_description.py  0006_version.py  0007_rename_name_version_version_version_name_and_more.py  0008_alter_category_options_alter_version_product.py
catalog/templates/catalog/: base.html  contacts.html  form_redirect.html  index.html  product.html  product_form.html  products.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
materials/: models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_material_slug.py
materials/templates/materials/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
shop_project/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html  verification_failed.html  verify_email.txt
