[tool.poetry]
name = "shop-project"
version = "0.1.0"
description = ""
authors = ["Anaxuname <anaxuname@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_project"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.7"
psycopg2-binary = "2.9.9"
Pillow = "10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
